# gnome-shell-extension-notesearch

./: README.md  autogen.sh  configure.ac
gnotesearch@tuxfoo.org/: extension.js  metadata.json
src/: Makefile.am  com.github.charkins.noteearch.gschema.xml.in  extension.js  metadata.json  metadata.json.in
